fix legend on the compare dataset chart

--- a/10_unified_dashboard_2_tabs/dashboard.html
+++ b/10_unified_dashboard_2_tabs/dashboard.html
@@ -12,10 +12,6 @@
             const hostname = window.location.hostname;
             const port = window.location.port;
             
-            if (hostname === 'localhost' || hostname === '127.0.0.1') {
-                return `${protocol}//localhost:5004`;
-            }
-            
             const baseUrl = `${protocol}//${hostname}${port ? ':' + port : ''}`;
             return baseUrl;
         })();
@@ -81,6 +77,6 @@
     <!-- Scripts (with cache-busting version param) -->
     <script src="static/main.js?v=20251015-1"></script>
     <script src="static/individual_dataset.js?v=20251015-3"></script>
-    <script src="static/compare_datasets.js?v=20251015-6"></script>
+    <script src="static/compare_datasets.js?v=20251018-FIX4"></script>
 </body>
 </html>
