Add batch correction warning section to About tab
- Add prominent batch correction warning in Data Handling Principles section
- Explain batch effects from technical variation (instruments, protocols, labs)
- Show current ICC=0.29 validation metric indicating significant batch effects
- Link to batch correction documentation in 14_exploratory_batch_correction/
- Mention ComBat harmonization and percentile normalization strategies
- Use warning-style orange block to highlight importance

This addresses the need to inform users about ongoing batch correction work
and set appropriate expectations about cross-study comparison validity.

--- a/10_unified_dashboard_2_tabs/static/about_content.html
+++ b/10_unified_dashboard_2_tabs/static/about_content.html
@@ -175,6 +175,17 @@ graph LR
         </div>
     </div>
 
+    <!-- Batch Correction Warning -->
+    <div style="background: #fff3e0; padding: 15px; border-radius: 8px; margin-top: 15px; border-left: 4px solid #ff9800;">
+        <h4 style="color: #e65100; margin-top: 0; font-size: 1em;">⚠️ Batch Correction</h4>
+        <p style="font-size: 0.95em; margin-bottom: 0;">
+            <strong>Batch effects</strong> arise when systematic technical variation (different instruments, protocols, labs) confounds biological signals in cross-study comparisons.
+            Current validation shows <strong>ICC=0.29</strong>, indicating significant batch effects.
+            We're implementing <strong>ComBat harmonization</strong> and <strong>percentile normalization</strong> to correct these effects and validate key findings.
+            <a href="https://github.com/yourusername/ecm-atlas/tree/main/14_exploratory_batch_correction" target="_blank" style="color: #e65100; font-weight: 600;">Learn more →</a>
+        </p>
+    </div>
+
     <!-- System Architecture -->
     <h3>🏗️ System Architecture</h3>
     <div style="margin: 30px 0;">
