--- a/10_unified_dashboard_2_tabs/static/about_content.html
+++ b/10_unified_dashboard_2_tabs/static/about_content.html
@@ -245,133 +245,7 @@ graph TD
         </a>
     </div>
 
-    <!-- All Datasets - Direct Links -->
-    <div class="section" style="margin-top: 30px;">
-        <h2>📚 All Datasets - Click to View Details</h2>
-        <p>Click on any dataset below to see detailed information about processing, statistics, and original publication:</p>
-
-        <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; margin-top: 20px;">
-            <!-- Dataset 1 -->
-            <a href="datasets/Randles_2021.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Randles_2021</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Kidney</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Homo sapiens</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Compartments:</strong> Glomerular, Tubulointerstitial</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 2 -->
-            <a href="datasets/Tam_2020.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Tam_2020</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Intervertebral Disc</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Homo sapiens</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Compartments:</strong> NP, IAF, OAF</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 3 -->
-            <a href="datasets/Ouni_2022.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Ouni_2022</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Pancreatic Islets</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 4 -->
-            <a href="datasets/Tsumagari_2023.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Tsumagari_2023</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Mammary Gland</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 5 -->
-            <a href="datasets/LiDermis_2021.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">LiDermis_2021</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Skin (Dermis)</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Homo sapiens</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 6 -->
-            <a href="datasets/Santinha_2024_Human.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Santinha_2024_Human</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Skeletal Muscle</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Homo sapiens</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 7 -->
-            <a href="datasets/Santinha_2024_Mouse_NT.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Santinha_2024_Mouse_NT</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Muscle (Native Tibialis)</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 8 -->
-            <a href="datasets/Santinha_2024_Mouse_DT.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Santinha_2024_Mouse_DT</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Muscle (Denervated Tibialis)</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 9 -->
-            <a href="datasets/Angelidis_2019.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Angelidis_2019</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Lung</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 10 -->
-            <a href="datasets/Dipali_2023.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Dipali_2023</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Various</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-
-            <!-- Dataset 11 -->
-            <a href="datasets/Schuler_2021.html" target="_blank" class="dataset-card" style="background: white; border: 2px solid #e0e0e0; border-radius: 10px; padding: 20px; text-decoration: none; color: inherit; transition: all 0.3s; display: block;">
-                <h3 style="margin: 0 0 10px 0; color: #667eea; font-size: 1.2em;">Schuler_2021</h3>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Tissue:</strong> Various</p>
-                <p style="margin: 5px 0; font-size: 0.9em;"><strong>Species:</strong> Mus musculus</p>
-                <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e0e0e0; color: #667eea; font-weight: 600; font-size: 0.9em;">
-                    View Details →
-                </div>
-            </a>
-        </div>
-
-        <style>
-            .dataset-card:hover {
-                transform: translateY(-5px);
-                box-shadow: 0 8px 16px rgba(102, 126, 234, 0.2);
-                border-color: #667eea !important;
-            }
-        </style>
-    </div>
+    <!-- Datasets section will be loaded dynamically via about_tab.js -->
 
     <!-- Stats Summary -->
     <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 25px; border-radius: 10px; margin-top: 30px;">
@@ -390,7 +264,7 @@ graph TD
                 <div style="opacity: 0.9;">Tissues</div>
             </div>
             <div style="text-align: center;">
-                <div style="font-size: 2.5em; font-weight: bold;">4</div>
+                <div style="font-size: 2.5em; font-weight: bold;">2</div>
                 <div style="opacity: 0.9;">Species</div>
             </div>
         </div>
