Update batch correction section with accurate V2 neuroCombat results
Previous (INCORRECT):
- Claimed batch correction was 'in progress'
- Showed preliminary ICC=0.29 (before correction)
- Warned about significant batch effects
- Orange warning style

Updated (CORRECT - based on codex results):
- neuroCombat V2 has been successfully completed
- ICC improved: 0.29 → 0.507 (within target 0.50-0.60)
- Driver recovery: 100% (14/14 key collagens: COL1A1/2/3, COL4A1/2, etc.)
- FDR-significant proteins: 101 markers (q<0.05 via meta-z)
- Z-score variance: 1.00 (within target 0.8-1.5)
- Green success style (✅)

Method details:
- Global neuroCombat with Age preservation
- Tissue-level mean restoration (compartment biology intact)
- Median imputation for missing values
- Alpha blending parameter: 0.85

Source: 14_exploratory_batch_correction/step2_batch/codex/90_results_codex.md
Output: merged_ecm_aging_COMBAT_V2_CORRECTED_codex.csv + validation_metrics_codex.json

--- a/10_unified_dashboard_2_tabs/static/about_content.html
+++ b/10_unified_dashboard_2_tabs/static/about_content.html
@@ -176,14 +176,21 @@ graph LR
         </div>
     </div>
 
-    <!-- Batch Correction Warning -->
-    <div style="background: #fff3e0; padding: 15px; border-radius: 8px; margin-top: 15px; border-left: 4px solid #ff9800;">
-        <h4 style="color: #e65100; margin-top: 0; font-size: 1em;">⚠️ Batch Correction</h4>
-        <p style="font-size: 0.95em; margin-bottom: 0;">
-            <strong>Batch effects</strong> arise when systematic technical variation (different instruments, protocols, labs) confounds biological signals in cross-study comparisons.
-            Current validation shows <strong>ICC=0.29</strong>, indicating significant batch effects.
-            We're implementing <strong>ComBat harmonization</strong> and <strong>percentile normalization</strong> to correct these effects and validate key findings.
-            <a href="https://github.com/yourusername/ecm-atlas/tree/main/14_exploratory_batch_correction" target="_blank" style="color: #e65100; font-weight: 600;">Learn more →</a>
+    <!-- Batch Correction Status -->
+    <div style="background: #e8f5e9; padding: 15px; border-radius: 8px; margin-top: 15px; border-left: 4px solid #4caf50;">
+        <h4 style="color: #2e7d32; margin-top: 0; font-size: 1em;">✅ Batch Correction Applied</h4>
+        <p style="font-size: 0.95em; margin-bottom: 10px;">
+            <strong>neuroCombat harmonization</strong> with Age preservation has been successfully applied to correct systematic technical variation across 11 studies.
+        </p>
+        <ul style="font-size: 0.9em; margin: 10px 0 0 20px; padding: 0;">
+            <li><strong>ICC improved:</strong> 0.29 → 0.507 (target: 0.50-0.60) ✓</li>
+            <li><strong>Driver recovery:</strong> 100% (14/14 key collagens detected)</li>
+            <li><strong>FDR-significant proteins:</strong> 101 cross-study markers (q<0.05)</li>
+            <li><strong>Z-score variance:</strong> 1.00 (target: 0.8-1.5) ✓</li>
+        </ul>
+        <p style="font-size: 0.85em; margin: 10px 0 0 0; font-style: italic; color: #555;">
+            Method: Global neuroCombat + tissue-level mean restoration + median imputation.
+            <a href="https://github.com/yourusername/ecm-atlas/tree/main/14_exploratory_batch_correction" target="_blank" style="color: #2e7d32; font-weight: 600;">Technical details →</a>
         </p>
     </div>
 
