--- a/10_unified_dashboard_2_tabs/dashboard.html
+++ b/10_unified_dashboard_2_tabs/dashboard.html
@@ -87,8 +87,8 @@
 
     <!-- Scripts (with cache-busting version param) -->
     <script src="static/about_tab.js?v=20251018-1"></script>
-    <script src="static/main.js?v=20251015-1"></script>
-    <script src="static/individual_dataset.js?v=20251015-3"></script>
+    <script src="static/main.js?v=20251018-2"></script>
+    <script src="static/individual_dataset.js?v=20251018-NaN-fix"></script>
     <script src="static/compare_datasets.js?v=20251018-ORGAN-TOGGLE"></script>
 </body>
 </html>
